Creation de la navbar

--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Site officiel de Nintendo France</title>
 </head>
+
 <body>
     
+    <header class="main-navbar">
+        <img class ="Home-logo" src="assets/img/Nintendo-Logo.png" alt="logo">
+        <nav class="navbar">
+            <ul class="navbar_content">
+                <li class="search">
+
+                </li>
+                <li class="wishlist">
+
+                </li>
+                <li class="panier">
+
+                </li>
+                <li class="connexion">
+
+                </li>
+            </ul>
+        </nav>
+    </header>
 </body>
+
 </html>
