Ajout de CSS pour le fond rouge et la mise en forme de rangée

--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="assets/style.css" rel="stylesheet" type="text/css">
     <title>Site officiel de Nintendo France</title>
 </head>
 
 <body>
-    
     <header class="main-navbar">
-        <img class ="Home-logo" src="assets/img/Nintendo-Logo.png" alt="logo">
+        <img class="Home-logo" src="assets/img/Nintendo-Logo.png" alt="logo">
         <nav class="navbar">
             <ul class="navbar_content">
                 <li class="search">
-
+                    Recherche
                 </li>
                 <li class="wishlist">
-
+                    Liste de souhaits
                 </li>
                 <li class="panier">
-
+                    Panier
                 </li>
                 <li class="connexion">
-
+                    Connexion
                 </li>
             </ul>
         </nav>
