--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/style.css" rel="stylesheet" type="text/css">
+    <link rel="icon" type="image" href="assets/img/mario-fav-ico.png">
     <title>Site officiel de Nintendo France</title>
 </head>
 
