Création des éléments de la liste de la bar de gauche + mise en colonne

--- a/index.html
+++ b/index.html
@@ -56,6 +56,38 @@
             </ul>
         </nav>
     </header>
+
+    <div class ="side_navbar">
+        <ul class ="side_navbar_content">
+            <li>
+                Jeux
+            </li>
+            <li>
+                Hardware
+            </li>
+            <li>
+                Nintendo Switch Online
+            </li>
+            <li>
+                Nintendo e-shop
+            </li>
+            <li>
+                My Nintendo Store
+            </li>
+            <li>
+                Assistance
+            </li>
+            <li>
+                News
+            </li>
+            <li>
+                Y a 3 bonshommes
+            </li>
+            <li>
+                ...
+            </li>
+        </ul>
+    </div>
 </body>
 
 </html>
