--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="side_navbar">
         <ul class="side_navbar_content">
             <li>
-                <svg xmlns="http://www.w3.org/2000/svg" height="1em" width="1.125em" viewBox="0 0 576 512" fill="white"
+                <svg xmlns="http://www.w3.org/2000/svg" height="2em" width="2.25em" viewBox="0 0 576 512" fill="white"
                     class="pla-svg-icon main-navigation-icon">
                     <path
                         d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z">
@@ -69,7 +69,7 @@
                 <div>Jeux</div>
             </li>
             <li>
-                <svg xmlns="http://www.w3.org/2000/svg" height="1em" width="1em" viewBox="0 0 30 30" fill="white"
+                <svg xmlns="http://www.w3.org/2000/svg" height="2em" width="2em" viewBox="0 0 30 30" fill="white"
                     class="pla-svg-icon main-navigation-icon">
                     <path
                         d="M28.235 20.294h-7.941v7.941A1.77 1.77 0 0 1 18.529 30h-7.058a1.77 1.77 0 0 1-1.765-1.765v-7.941H1.765A1.77 1.77 0 0 1 0 18.529v-7.058a1.77 1.77 0 0 1 1.765-1.765h7.941V1.765A1.77 1.77 0 0 1 11.471 0h7.059a1.77 1.77 0 0 1 1.765 1.765v7.941h7.941A1.77 1.77 0 0 1 30 11.471v7.059a1.77 1.77 0 0 1-1.765 1.764zM7.059 14.118h-3.53a.882.882 0 0 0 0 1.765h3.53a.882.882 0 0 0 0-1.765zm8.823-10.589a.882.882 0 1 0-1.765 0v3.53a.882.882 0 1 0 1.765 0zm0 19.412a.882.882 0 0 0-1.765 0v3.529a.882.882 0 1 0 1.765 0zm10.588-8.824h-3.529a.882.882 0 1 0 0 1.765h3.529a.882.882 0 0 0 0-1.765z">
@@ -102,7 +102,7 @@
                 <div>Nintendo e-shop</div>
             </li>
             <li>
-                <svg xmlns="http://www.w3.org/2000/svg" height="1em" width="1.3666666666666666666666666666667em"
+                <svg xmlns="http://www.w3.org/2000/svg" height="2em" width="2.7222222222222222222em"
                     viewBox="0 0 41 30" class="pla-svg-icon main-navigation-icon" fill="white">
                     <path
                         d="M31.742 8.257A15.455 15.455 0 0 0 17.95.001c-6.905 0-14.047 4.607-14.047 12.316a8.747 8.747 0 0 0 4.826 7.718 1.532 1.532 0 0 0 2-.671l2.647-4.947 1.916 3.76a1.54 1.54 0 0 0 2.739 0l1.9-3.738 2.589 4.916a1.537 1.537 0 1 0 2.718-1.434l-3.97-7.541a1.558 1.558 0 0 0-1.37-.821 1.533 1.533 0 0 0-1.356.838l-1.88 3.694-1.882-3.69a1.534 1.534 0 0 0-2.721-.026L8.83 16.401a5.4 5.4 0 0 1-1.854-4.086c0-5.781 5.579-9.236 10.978-9.236a12.512 12.512 0 0 1 11.463 7.374 1.543 1.543 0 0 0 1.488.874 1.349 1.349 0 0 1 .229 0h.123A6.624 6.624 0 0 1 35.8 22.633a6.6 6.6 0 0 1-4.75 1.937 6.5 6.5 0 0 1-3.659-1.161 1.531 1.531 0 0 0-1.885.009 16.937 16.937 0 0 1-22.793-1.99 1.54 1.54 0 1 0-2.352 1.986 20.033 20.033 0 0 0 14.807 6.587 19.874 19.874 0 0 0 11.344-3.5 9.912 9.912 0 0 0 4.531 1.156 9.666 9.666 0 0 0 9.763-9.775 9.756 9.756 0 0 0-9.067-9.62z">
