reduction marge + changement de couleur en passage souris + centrage des items

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div>Hardware</div>
             </li>
             <li>
-                <svg style="width: 32px; height: 32px; position: relative; margin: 8px 8px 8px 8px; top: 1px; left: 12px; float: left;"
+                <svg style="width: 32px; height: 32px; position: relative; margin: 8px 8px 8px 8px; top: 1px; float: left;"
                     version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
                     y="0px" viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve">
                     <g class="nav-icon-switch" fill="white">
@@ -90,7 +90,7 @@
                 <div> Switch Online</div>
             </li>
             <li>
-                <svg style="width: 32px; height: 32px; position: relative; margin: 8px 8px 8px 8px; top: 1px; left: 12px; float: left;"
+                <svg style="width: 32px; height: 32px; position: relative; margin: 8px 8px 8px 8px; top: 1px; float: left;"
                     version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
                     y="0px" viewBox="0 0 539.07 511.98" enable-background="new 0 0 539.07 511.98" xml:space="preserve">
                     <g class="nav-icon-nintendoeshop" fill="white">
@@ -111,7 +111,7 @@
                 <div>My Nintendo Store</div>
             </li>
             <li>
-                <svg style="width: 32px; height: 32px; position: relative; margin: 8px 8px 8px 8px; top: 1px; left: 12px; float: left;"
+                <svg style="width: 32px; height: 32px; position: relative; margin: 8px 8px 8px 8px; top: 1px; float: left;"
                     version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
                     y="0px" viewBox="0 0 128 128" enable-background="new 0 0 128 128" xml:space="preserve">
                     <g class="nav-icon-support" fill="white">
@@ -124,7 +124,7 @@
                 <div>Assistance</div>
             </li>
             <li>
-                <svg style="width: 32px; height: 32px; position: relative; margin: 8px 8px 8px 8px; top: 1px; left: 12px; float: left;"
+                <svg style="width: 32px; height: 32px; position: relative; margin: 8px 8px 8px 8px; top: 1px; float: left;"
                     version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
                     y="0px" viewBox="0 0 128 128" enable-background="new 0 0 128 128" xml:space="preserve">
                     <g class="nav-icon-news" fill="white">
@@ -154,7 +154,7 @@
                 <div>News</div>
             </li>
             <li>
-                <svg style="width: 32px; height: 32px; position: relative; margin: 8px 8px 8px 8px; top: 6px; left: 8px; float: left;"
+                <svg style="width: 32px; height: 32px; position: relative; margin: 8px 8px 8px 8px; top: 6px; float: left;"
                     version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
                     y="0px" viewBox="0 0 128 128" enable-background="new 0 0 400 400" xml:space="preserve" fill="white">
                     <g>
