Bonne disposition des éléments

--- a/index.html
+++ b/index.html
@@ -180,12 +180,25 @@
     </div>
 
     <div class="newsbar">
-        <h1 class="newshead">Dernières news</h1>
+        <h2 class="newshead">Dernières news</h2>
         <ul class="articles">
-            <li>
-
+            <li class="article">
+                <img class="imgarticle" src="assets/img/nintendo-e-shop.jpg" alt="imgarticle">
+                <div class="contenu_article">
+                    <h3 class="titre_article">Les téléchargements de la semaine</h3>
+                    <p class="info_article">12/01/2022 | Nintendo Switch</p>
+                    <p class="text_article">ASTONEER et 26 autres jeux sortent cette semaine</p>
+                </div>
             </li>
-            <li>
+            <li class="article">
+                <img class="imgarticle" src="assets/img/metroid.jpg" alt="imgarticle">
+                <div class="contenu_article">
+                    <h3 class="titre_article">Rapports Metroid Dread, Vol 11: conseils utilse pour maîtriser
+                        l'exploration et les combats</h3>
+                    <p class="info_article">11/01/2022 | Nintendo Switch</p>
+                    <p class="text_article">Voici quelques conseils d'expert pour améliorer vos capacités sur la planète
+                        ZDR</p>
+                </div>
 
             </li>
         </ul>
