création de la div grille + ajout d'images

--- a/index.html
+++ b/index.html
@@ -199,10 +199,25 @@
                     <p class="text_article">Voici quelques conseils d'expert pour améliorer vos capacités sur la planète
                         ZDR</p>
                 </div>
-
             </li>
         </ul>
+    </div>
 
+    <div class="grille_dimg">
+        <ul class="contenu_grille">
+            <li>
+                <img src="assets/img/kirby_img_grid.jpg" alt="kirby">
+            </li>
+            <li>
+                <img src="assets/img/30years_kirby.jpg" alt="30 years">
+            </li>
+            <li>
+                <img src="pokemon_arceus" alt="arceus">
+            </li>
+            <li>
+                <img src="assets/img/pokemon_diamond.jpg" alt="pokemon diamant perle">
+            </li>
+        </ul>
     </div>
 </body>
 
