Disposition en grille des images

--- a/index.html
+++ b/index.html
@@ -204,20 +204,10 @@
     </div>
 
     <div class="grille_dimg">
-        <ul class="contenu_grille">
-            <li>
-                <img src="assets/img/kirby_img_grid.jpg" alt="kirby">
-            </li>
-            <li>
-                <img src="assets/img/30years_kirby.jpg" alt="30 years">
-            </li>
-            <li>
-                <img src="pokemon_arceus" alt="arceus">
-            </li>
-            <li>
-                <img src="assets/img/pokemon_diamond.jpg" alt="pokemon diamant perle">
-            </li>
-        </ul>
+                <img class="left_pic" src="assets/img/kirby_img_grid.jpg" alt="kirby">
+                <img class="mid_pic" src="assets/img/30years_kirby.jpg" alt="30 years">
+                <img class="right pic" src="assets/img/pokemon_arceus.jpg" alt="arceus">
+                <img class="bottom_pic" src="assets/img/pokemon_diamond.jpg" alt="pokemon diamant perle">
     </div>
 </body>
 
