disposition grille + bonne taille des images

--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@
         </div>
 
         <div class="grille_dimg">
-            <img class="left_pic" src="assets/img/kirby_img_grid.jpg" alt="kirby">
+            <img class="portrait" src="assets/img/kirby_img_grid.jpg" alt="kirby">
             <img class="mid_pic" src="assets/img/30years_kirby.jpg" alt="30 years">
             <img class="right pic" src="assets/img/pokemon_arceus.jpg" alt="arceus">
-            <img class="bottom_pic" src="assets/img/pokemon_diamond.jpg" alt="pokemon diamant perle">
+            <img class="paysage" src="assets/img/pokemon_diamond.jpg" alt="pokemon diamant perle">
         </div>
     </div>
 </body>
