header et navbar fixée

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </nav>
     </header>
 
-    <div class="main">
+    <div class="maindiv">
         <div class="side_navbar">
             <ul class="side_navbar_content">
                 <li>
