Ajout de contenu dans la grille

--- a/index.html
+++ b/index.html
@@ -210,8 +210,11 @@
         <div class="grille_dimg">
             <img class="portrait" src="assets/img/kirby_img_grid.jpg" alt="kirby">
             <img class="mid_pic" src="assets/img/30years_kirby.jpg" alt="30 years">
-            <img class="right pic" src="assets/img/pokemon_arceus.jpg" alt="arceus">
+            <img class="right_pic" src="assets/img/pokemon_arceus.jpg" alt="arceus">
             <img class="paysage" src="assets/img/pokemon_diamond.jpg" alt="pokemon diamant perle">
+            <img src="assets/img/mario_party.jpg" alt="mario party">
+            <img src="assets/img/metroid_dread.jpg" alt="metroid dread">
+            <img src="assets/img/cerebrale.jpg" alt="cerebrale academie">
         </div>
     </div>
 </body>
