--- a/index.html
+++ b/index.html
@@ -223,6 +223,8 @@
             <img src="assets/img/mario_party.jpg" alt="mario party">
             <img src="assets/img/metroid_dread.jpg" alt="metroid dread">
             <img src="assets/img/cerebrale.jpg" alt="cerebrale academie">
+            <img class="fun" src="assets/img/animal-crossing.jpg" alt="animal crossing">
+            <img class="fun" src="assets/img/happy-home-paradise.jpg" alt="happy home paradise">
         </div>
     </div>
 </body>
