--- a/index.html
+++ b/index.html
@@ -179,9 +179,8 @@
             </ul>
             <div class="back_to_top">
                 <div class="arrow_div">
-                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg"
-                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 48 48"
-                        enable-background="new 0 0 48 48" xml:space="preserve">
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                        x="0px" y="0px" viewBox="0 0 48 48" enable-background="new 0 0 48 48" xml:space="preserve">
                         <path fill="#BF0010"
                             d="M24,38.5c-1,0-2-0.4-2.8-1.1l-20.1-20c-1.5-1.5-1.5-3.9,0-5.4l0,0l1.4-1.4C4,9.1,6.4,9.1,8,10.6l16,15.9l16.1-15.9c1.5-1.5,3.9-1.5,5.5,0l1.3,1.4c1.5,1.5,1.5,3.9,0,5.4l0,0l-20.1,20C26,38.1,25,38.5,24,38.5L24,38.5L24,38.5z">
                         </path>
@@ -216,10 +215,16 @@
         </div>
 
         <div class="grille_dimg">
-            <img class="portrait" src="assets/img/kirby_img_grid.jpg" alt="kirby">
-            <img class="mid_pic" src="assets/img/30years_kirby.jpg" alt="30 years">
-            <img class="right_pic" src="assets/img/pokemon_arceus.jpg" alt="arceus">
-            <img class="paysage" src="assets/img/pokemon_diamond.jpg" alt="pokemon diamant perle">
+            <figure class="portrait">
+                <img src="assets/img/kirby_img_grid.jpg" alt="kirby">
+                <figcaption>SORTIE LE 25 MARS >></figcaption>
+            </figure>
+            <img src="assets/img/30years_kirby.jpg" alt="30 years">
+            <img src="assets/img/pokemon_arceus.jpg" alt="arceus">
+            <figure class="paysage">
+                <img src="assets/img/pokemon_diamond.jpg" alt="pokemon diamant perle">
+                <figcaption>DISPONIBLE DES MAINTENANT !>></figcaption>
+            </figure>
             <img src="assets/img/mario_party.jpg" alt="mario party">
             <img src="assets/img/metroid_dread.jpg" alt="metroid dread">
             <img src="assets/img/cerebrale.jpg" alt="cerebrale academie">
