--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             </path>
                         </g>
                     </svg>
-                    <div> Switch Online</div>
+                    <div>Nintendo Switch Online</div>
                 </li>
                 <li>
                     <svg style="width: 32px; height: 32px; position: relative; margin: 8px 8px 8px 8px; top: 1px; float: left;"
