creation footer et placement du logo

--- a/index.html
+++ b/index.html
@@ -232,6 +232,12 @@
             <img class="fun" src="assets/img/happy-home-paradise.jpg" alt="happy home paradise">
         </div>
     </div>
+
+    <footer>
+        <div class="upper_foot">
+            <img class="Home-logo" src="assets/img/Nintendo-Logo.png" alt="nintendo-logo">
+        </div>
+    </footer>
 </body>
 
 </html>
