utilisation d'un form pour le choix du pays

--- a/index.html
+++ b/index.html
@@ -236,6 +236,19 @@
     <footer>
         <div class="upper_foot">
             <img class="Home-logo" src="assets/img/Nintendo-Logo.png" alt="nintendo-logo">
+            <div class="indication_pays">
+                <label for="choix">Pays:</label>
+                <input list="choix_pays" id="choix" name="choix" />
+                <datalist id="choix_pays">
+                    <option value="France">
+                    <option value="England">
+                    <option value="Deutschland">
+                </datalist>
+            </div>
+
+        </div>
+        <div class="lower_foot">
+
         </div>
     </footer>
 </body>
